# CathayCargo_DepthCamera

Frontend/: IMAGE_CAPTURE_README.md  README.md  backend-package.json  image-capture-service.js  package-lock.json  package.json  start-image-service.sh
Frontend/public/: index.html
Frontend/src/: App.css  App.tsx
Frontend/src/components/: CameraStream.tsx  DataTable.tsx  EditModal.tsx  Header.tsx  LeftSidebar.tsx
Frontend/src/data/: mockData.ts
Frontend/src/services/: api.ts
Frontend/src/types/: index.ts
depth_demo/: README.md  docker-compose.yml  pyproject.toml
depth_demo/src/: main.py
depth_demo/src/depth/: 20251018_TareCalibration.json  HEIGHT_MEASUREMENT_README.md  depth.py  distance_to_object.py  height_measurement_ransac.py  jeff_test.json  main.py  option1.py  realsense_device_manager.py  test.py
depth_demo/src/depth/Calibration README/: CHANGES_LOG.md  EXAMPLE_OUTPUT.md  FILE_GUIDE.md  HEIGHT_MEASUREMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README_FILTERING.md
depth_demo/src/routers/: capture.py  dimension.py
depth_demo/src/services/: capture.py  dimension.py
depth_demo/src/stores/: valkey.py
