[tool.poetry]
name = "depth-demo"
version = "0.1.0"
description = ""
authors = ["eminemjeff <eminem_jeff@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrealsense2 = "^2.56.5.9235"
opencv-contrib-python = "^4.12.0.88"
fastapi = "^0.119.0"
pydantic-core = "^2.41.4"
uvicorn = "^0.37.0"
valkey = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
